--- a/config/database.yml
+++ b/config/database.yml
@@ -4,10 +4,12 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+ adapter: mysql2
+ encoding: utf8
+ database: dev_bremir
+ pool: 5
+ username: <%= ENV["DB_USERNAME"] %>
+ password: <%= ENV["DB_PASSWORD"] %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -19,8 +21,9 @@ test:
   timeout: 5000
 
 production:
-  adapter: postgresql
-  host:
-  database:
-  username:
-  password:
+ adapter: mysql2
+ encoding: utf8
+ database: bremir
+ pool: 5
+ username: <%= ENV["DB_USERNAME"] %>
+ password: <%= ENV["DB_PASSWORD"] %>
